--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#000</color>
+    <color name="colorPrimaryDark">#000</color>
+    <color name="colorAccent">#03DAC5</color>
+
+    <color name="gray">#585858</color>
+
+    <color name="aqua">#32cd32</color>
+    <color name="yellow">#ffff00</color>
+    <color name="pink">#ff69b4</color>
+    <color name="dpurple">#7920B2</color>
+    <color name="lpurple">#984CC2</color>
+    <color name="orange">#ffa500</color>
+    <color name="red">#ff0000</color>
+    <color name="sblue">#00ffff</color>
+    <color name="cssgreen">#38f9d7</color>
+    <color name="cssblue">#009efd</color>
+    <color name="csswhite">#fed6e3</color>
+    <color name="lightblue">#4E65FF</color>
+
+
+    <color name="blue">#0000ff</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="green">#5CD183</color>
+
+
 </resources>
