--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,46 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/greensquare">
 
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Let's get you signed up"
-        android:textColor="@color/white"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
     <LinearLayout
-        android:layout_below="@id/text1"
         android:id="@+id/n"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp">
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-
+            android:id="@+id/countryFlag"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@drawable/india"/>
 
         <EditText
             android:id="@+id/countryCode"
             android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:textColor="@color/white"
-            android:hint="+91"
-            android:layout_marginLeft="10dp"
-
+            android:hint="@string/country_code"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/montserrat"
             android:textStyle="bold"
             android:background="@drawable/square"
@@ -52,98 +41,141 @@
         <EditText
             android:id="@+id/phoneNumber"
             android:layout_width="130dp"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/white"
-            android:hint="Mobile No"
+            android:hint="@string/mobile_no"
             android:layout_marginLeft="20dp"
             android:background="@drawable/square"
             android:textAlignment="center"
             android:textStyle="bold"
             android:padding="5dp"
             android:textColorHint="@android:color/darker_gray"
-            />
+            tools:ignore="LabelFor" />
 
     </LinearLayout>
 
     <EditText
-        android:layout_below="@+id/n"
         android:id="@+id/email"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
         android:hint="Email Address"
         android:fontFamily="@font/montserrat"
         android:background="@drawable/square"
-        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:layout_marginBottom="20dp"
+        android:textStyle="bold"
+        android:inputType="number"
+        android:padding="5dp"
+        android:textColorHint="@android:color/darker_gray"
+        android:minWidth="250dp"
+        android:maxWidth="350dp"
+        android:textColor="@color/white"
+        />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:hint="@string/password"
+        android:fontFamily="@font/montserrat"
+        android:background="@drawable/square"
+        android:textAlignment="center"
+        android:layout_marginBottom="5dp"
+        android:textStyle="bold"
+        android:padding="5dp"
+        android:inputType="textPassword"
+        android:textColorHint="@android:color/darker_gray"
+        android:minWidth="250dp"
+        android:maxWidth="350dp"
+        android:textColor="@color/white"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/password_must_contain"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:layout_marginBottom="20dp"
+        android:textSize="11sp"
+        tools:ignore="SmallSp" />
+
+    <EditText
+        android:id="@+id/confirmPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:hint="@string/confirm_password"
+        android:fontFamily="@font/montserrat"
+        android:background="@drawable/square"
         android:textAlignment="center"
         android:layout_marginBottom="20dp"
         android:textStyle="bold"
         android:padding="5dp"
+        android:inputType="textPassword"
         android:textColorHint="@android:color/darker_gray"
+        android:minWidth="250dp"
+        android:maxWidth="350dp"
+        android:textColor="@color/white"
         />
 
     <EditText
         android:layout_below="@+id/email"
         android:id="@+id/reference"
         android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:hint="Reference (optional)"
+        android:layout_height="40dp"
+        android:hint="@string/reference"
         android:fontFamily="@font/montserrat"
         android:background="@drawable/square"
-        android:layout_centerHorizontal="true"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="25dp"
         android:padding="5dp"
         android:textColorHint="@android:color/darker_gray"
+        android:textColor="@color/white"
         />
+
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_below="@+id/signup"
+            android:id="@+id/signUpButton"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
+            android:text="Sign Up"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:background="@drawable/round"
+            android:textSize="16sp"
+            android:fontFamily="@font/montserrat"
+            android:layout_marginBottom="10dp"/>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
+
+    </FrameLayout>
+
+
 
     <TextView
         android:id="@+id/text2"
         android:layout_below="@+id/reference"
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:textColor="@color/white"
         android:fontFamily="@font/montserrat"
         android:textSize="15sp"
-        android:text="By signing up, you are agreeing to our"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:id="@+id/text3"
-        android:layout_below="@+id/text2"
-        android:layout_width="wrap_content"
-        android:textColor="@color/blue"
-        android:fontFamily="@font/montserrat"
-        android:textSize="15sp"
-        android:text="Terms, Conditions and"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:id="@+id/text4"
-        android:layout_below="@+id/text3"
-        android:layout_width="wrap_content"
-        android:textColor="@color/blue"
-        android:textSize="15sp"
-        android:text="Privacy Policy."
-        android:fontFamily="@font/montserrat"
+        android:text="@string/term_and_conditions"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="25dp"/>
-
-    <Button
-        android:layout_below="@+id/signup"
-        android:id="@+id/signUpButton"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:background="@drawable/round"
-        android:textSize="16sp"
-        android:fontFamily="@font/montserrat"
-        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
         android:layout_marginBottom="30dp"/>
 
     <TextView
@@ -151,7 +183,7 @@
         android:layout_below="@+id/signUpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="----------OR----------"
+        android:text="@string/or"
         android:fontFamily="@font/montserrat"
         android:textStyle="bold"
         android:textColor="@color/white"
@@ -164,11 +196,11 @@
         android:layout_below="@+id/text5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SIGN UP WITH"
+        android:text="@string/sign_up_with"
         android:fontFamily="@font/montserrat"
         android:textStyle="bold"
         android:textColor="@color/white"
-        android:textSize="15sp"
+        android:textSize="14sp"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"/>
 
@@ -183,40 +215,40 @@
 
         <ImageView
             android:id="@+id/google"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:background="@drawable/google"
             android:layout_margin="10dp"
             />
 
         <ImageView
             android:id="@+id/linkedin"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:background="@drawable/linkedin"
             android:layout_margin="10dp"
             />
 
         <ImageView
             android:id="@+id/instagram"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:background="@drawable/instagram"
             android:layout_margin="10dp"
             />
 
         <ImageView
             android:id="@+id/facebook"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:background="@drawable/facebook"
             android:layout_margin="10dp"
             />
 
         <ImageView
             android:id="@+id/twitter"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:background="@drawable/twitter"
             android:layout_margin="10dp"
             />
@@ -236,7 +268,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Already have an account?  "
+            android:text="@string/already_have_account"
             android:fontFamily="@font/montserrat"
             android:textStyle="bold"
             android:textColor="@color/white"
@@ -246,11 +278,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign In "
+            android:text="@string/sign_in"
             android:fontFamily="@font/montserrat"
             android:textStyle="bold"
-            android:textColor="@color/blue"
+            android:textColor="@color/green"
             android:textSize="15sp"
+            android:layout_marginLeft="10dp"
             />
 
     </LinearLayout>
