--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,13 +7,6 @@
     android:background="@drawable/greensquare"
     >
 
-    <LinearLayout
-        android:id="@+id/n"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginBottom="20dp"/>
 
     <EditText
         android:id="@+id/email"
@@ -30,7 +23,8 @@
         android:padding="5dp"
         android:textAlignment="center"
         android:textColorHint="@android:color/darker_gray"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"/>
 
 
     <EditText
