--- a/app/src/main/res/layout/activity_user__detail.xml
+++ b/app/src/main/res/layout/activity_user__detail.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/greensquare">
+    android:background="@drawable/greensquare"
+    tools:context=".SignUp.User_Detail">
 
     <TextView
         android:layout_width="wrap_content"
@@ -42,33 +44,10 @@
         android:padding="5dp"
         android:fontFamily="@font/montserrat"
         android:textColorHint="@android:color/darker_gray"
-        />
-
-    <EditText
-        android:id="@+id/setPassword"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:hint="Set Password"
-        android:background="@drawable/square"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:layout_marginBottom="5dp"
-        android:padding="5dp"
-        android:fontFamily="@font/montserrat"
-        android:textColorHint="@android:color/darker_gray"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
-        android:text="Password must contain at least 8 characters."
         android:textColor="@color/white"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:textSize="11sp"/>
+        />
+
+
 
     <EditText
         android:id="@+id/state"
@@ -83,6 +62,7 @@
         android:padding="5dp"
         android:fontFamily="@font/montserrat"
         android:textColorHint="@android:color/darker_gray"
+        android:textColor="@color/white"
         />
 
     <EditText
@@ -98,6 +78,7 @@
         android:padding="5dp"
         android:fontFamily="@font/montserrat"
         android:textColorHint="@android:color/darker_gray"
+        android:textColor="@color/white"
         />
 
     <LinearLayout
@@ -124,7 +105,8 @@
         android:gravity="center"
         android:layout_marginBottom="20dp">
 
-        <RadioButton
+        <Button
+            android:id="@+id/male"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:fontFamily="@font/montserrat"
@@ -137,7 +119,8 @@
             android:layout_marginRight="30dp"
             />
 
-        <RadioButton
+        <Button
+            android:id="@+id/female"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:fontFamily="@font/montserrat"
@@ -163,6 +146,7 @@
         android:padding="5dp"
         android:fontFamily="@font/montserrat"
         android:textColorHint="@android:color/darker_gray"
+        android:textColor="@color/white"
         />
 
 
