--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -42,6 +42,7 @@
             android:layout_marginLeft="20dp"
             android:background="@drawable/square"
             android:textAlignment="center"
+            android:inputType="number"
             android:textStyle="bold"
             android:padding="5dp"
             android:textColorHint="@android:color/darker_gray"
@@ -59,7 +60,7 @@
         android:textAlignment="center"
         android:layout_marginBottom="20dp"
         android:textStyle="bold"
-        android:inputType="number"
+        android:inputType="textEmailAddress"
         android:padding="5dp"
         android:textColorHint="@android:color/darker_gray"
         android:minWidth="250dp"
