--- a/app/src/main/res/layout/activity_wealth.xml
+++ b/app/src/main/res/layout/activity_wealth.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:background="@drawable/greensquare">
+    android:background="@drawable/lightgreensquare">
 
     <LinearLayout
+        android:id="@+id/back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -59,7 +60,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:background="@drawable/fixeddeposit"
-                 />
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -474,7 +475,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginLeft="20dp"
-           >
+            >
 
 
             <LinearLayout
