--- a/app/src/main/res/layout/wealthactivity.xml
+++ b/app/src/main/res/layout/wealthactivity.xml
@@ -58,7 +58,7 @@
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:background="@drawable/fixeddeposit"
+                android:background="@drawable/fixeddeposit2"
                  />
 
             <TextView
@@ -171,7 +171,7 @@
                     <ImageView
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:background="@drawable/fixeddeposit"
+                        android:background="@drawable/fixeddeposit2"
                         />
 
                 </LinearLayout>
