--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -218,14 +218,26 @@
             android:background="@drawable/instagram"
             android:layout_margin="10dp"
             />
+<FrameLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-        <ImageView
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/fb"
+        android:layout_height="35dp"
+        android:layout_width="35dp"
+        android:visibility="gone"
+        android:layout_margin="10dp"
+        />
+
+        <ImageButton
             android:id="@+id/facebook"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:background="@drawable/facebook"
             android:layout_margin="10dp"
             />
+</FrameLayout>
 
         <ImageView
             android:id="@+id/twitter"
