--- a/app/src/main/res/layout/activity_wealth2.xml
+++ b/app/src/main/res/layout/activity_wealth2.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:background="@drawable/greensquare">
+    android:background="@drawable/lightgreensquare">
 
     <LinearLayout
         android:layout_width="match_parent"
