--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,6 +59,14 @@
         android:layout_marginBottom="30dp"/>
 
 
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
+
     <TextView
         android:id="@+id/text5"
         android:layout_below="@+id/signUpButton"
