--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -239,14 +239,27 @@
             />
 </FrameLayout>
 
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+
+            <com.twitter.sdk.android.core.identity.TwitterLoginButton
+                android:id="@+id/twitter"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"/>
+
         <ImageView
-            android:id="@+id/twitter"
+            android:id="@+id/tw__twitter_logo"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:background="@drawable/twitter"
             android:layout_margin="10dp"
+            android:background="@drawable/twitter"
             />
 
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -270,7 +283,7 @@
             />
 
         <TextView
-            android:id="@+id/movetosignin"
+            android:id="@+id/signIntv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
